--- a/Simple Timer/Simple Timer.vcxproj.filters
+++ b/Simple Timer/Simple Timer.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TmObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Program.h">
@@ -80,6 +83,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TmObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
